<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/one"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="One" />
        <item
            android:id="@+id/two"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="Two" />
    </group>

</menu>